--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "author": "Begimay Abdraimova",
     "license": "ISC",
     "devDependencies": {
-        "@parcel/transformer-sass": "^2.8.3",
-        "parcel": "^2.8.3"
+        "@parcel/transformer-sass": "2.8.3",
+        "parcel": "2.8.3"
     },
     "dependencies": {
-        "@anikin/parcel-transformer-handlebars": "^1.0.9",
-        "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
-        "handlebars": "^4.7.7",
-        "sass": "^1.58.0"
+        "@anikin/parcel-transformer-handlebars": "1.0.9",
+        "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
+        "handlebars": "4.7.7",
+        "sass": "1.58.0"
     }
 }
