--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "devDependencies": {
         "@parcel/transformer-sass": "2.8.3",
+        "express": "^4.18.2",
         "parcel": "2.8.3"
     },
     "dependencies": {
