--- a/.parcelrc
+++ b/.parcelrc
@@ -1,7 +1,11 @@
 {
-  "extends": "@parcel/config-default",
-  "transformers": {
-    "*.hbs": ["@anikin/parcel-transformer-handlebars-precompile"],
-    "*.sass": ["@parcel/transformer-sass"]
-  }
+    "extends": "@parcel/config-default",
+    "transformers": {
+        "*.hbs": [
+            "@anikin/parcel-transformer-handlebars-precompile"
+        ],
+        "*.sass": [
+            "@parcel/transformer-sass"
+        ]
+    }
 }
